--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <title>DEV$ Finance</title>
   </head>
   <body>
-    <header><h1 id="logo">DEV$ Finance</h1></header>
+    <header>
+      <h1 id="logo">DEV<strong>$</strong> Finance</h1>
+    </header>
 
     <main class="container">
       <section id="balance">
-        <h2>Balanço</h2>
+        <h2 class="sr-only">Balanço</h2>
         <div class="card">
           <h3>Entradas</h3>
           <p>R$ 5.000,00</p>
@@ -32,7 +34,7 @@
       </section>
 
       <section id="transactions">
-        <h2>Transações</h2>
+        <h2 class="sr-only">Transações</h2>
 
         <table id="data-table">
           <thead>
@@ -63,7 +65,7 @@
     </main>
 
     <footer class="container">
-      DEV$ Finance - &copy; Maratorna de Programação | Rockeatseat
+      DEV$ Finance - 2022 &copy; Maratorna de Programação | Rocketseat
     </footer>
   </body>
 </html>
