--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
       <section id="transactions">
         <h2 class="sr-only">Transações</h2>
 
-        <a class="button new" href="#">+ Nova Transação</a>
+        <a class="button new" href="#" onclick="Modal.open()"
+          >+ Nova Transação</a
+        >
 
         <table id="data-table">
           <thead>
@@ -86,12 +88,68 @@
       </section>
     </main>
 
-    <div class="modal-overlay active">
-      <div class="modal">Sexin</div>
+    <div class="modal-overlay">
+      <div class="modal">
+        <div id="form">
+          <h2>Nova Transação</h2>
+
+          <form action="">
+            <div class="input-group">
+              <label for="description" class="sr-only">Descrição</label>
+              <input
+                type="text"
+                id="description"
+                name="description"
+                placeholder="Descrição"
+              />
+            </div>
+
+            <div class="input-group">
+              <label for="amount" class="sr-only">Valor</label>
+              <input
+                type="number"
+                step="0.01"
+                id="amount"
+                name="amount"
+                placeholder="R$ 0,00"
+              />
+            </div>
+
+            <div class="input-group">
+              <small class="help">
+                <p>Use "-" para negativo e "," para decimais</p>
+              </small>
+            </div>
+
+            <div class="input-group">
+              <label for="date" class="sr-only">Data</label>
+              <input type="date" id="date" name="date" placeholder="Data" />
+            </div>
+
+            <div class="input-group actions">
+              <a href="#" class="button cancel" onclick="Modal.close()"
+                >Cancelar</a
+              >
+              <button>Salvar</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
 
     <footer class="container">
       DEV$ Finance - 2022 &copy; Maratorna de Programação | Rocketseat
     </footer>
+
+    <script>
+      const Modal = {
+        open() {
+          document.querySelector(".modal-overlay").classList.add("active");
+        },
+        close() {
+          document.querySelector(".modal-overlay").classList.remove("active");
+        },
+      };
+    </script>
   </body>
 </html>
